Added new list items

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <li>Home</li>
         <li>About</li>
         <li>Contact</li>
+        <li>Gallery</li>
+        <li>More</li>
     </ul>
 </body>
 </html>
